# Telegram-Group-Chat-Scanner

./: .gitignore  Cargo.toml
.github/workflows/: build.yaml
src/: buy_ca.rs  construct_alpha_call.rs  construct_call_message.rs  construct_mirror_message.rs  download_chat_photo.rs  extract_chat_data.rs  extract_chat_data_from_chat.rs  extract_data_by_username.rs  find_chat.rs  forward_redacted_systems_bot_messages.rs  get_chats.rs  main.rs  mark_all_chats_as_read.rs  mirror_messages.rs  new_message_listener.rs  print_dialog_data.rs  send_message.rs
src/chat_processing/: extract_chat_data_from_chat.rs  extract_chat_data_from_message.rs  extract_data_by_username.rs  find_chat.rs  mod.rs
src/message_processing/: construct_alpha_call_message.rs  construct_call_message.rs  mod.rs
src/token_address_extractors/: ethereum.rs  ethereum_based.rs  mod.rs  solana.rs  tron.rs
src/utils/: mod.rs  print_dialog_data.rs  react_to_message.rs
